# Customer-Segmentation-Retention-Strategy

./: README.md  main.py  pyproject.toml  template.py
SRC/Customer_Segmentation_Retention_Strategy/components/: data_ingestion.py
SRC/Customer_Segmentation_Retention_Strategy/config/: configuration.py
SRC/Customer_Segmentation_Retention_Strategy/entity/: config_entity.py
SRC/Customer_Segmentation_Retention_Strategy/pipelines/: stage_01_data_ingestion.py
SRC/Customer_Segmentation_Retention_Strategy/utils/: __init__.py  common.py
config/: config.yaml
research/: 01_exploratory_analysis_and_business_insights.ipynb  02_customer_churn_prediction_model.ipynb  customer_data.csv
